Fix another issue in list, make list visible only in link width hover exactly, and here i learn more about positions

--- a/css/style.css
+++ b/css/style.css
@@ -62,8 +62,9 @@ header ul {
     background-color: #F6F6F6;
     padding: 0;
     width: 12rem;
-    position: relative;
+    position: absolute;
     top: 3.5rem;
+    right: 0;
     display: none;
     transition: 0s ease all;
 }
